# snype

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: input.c  input.h  main.c  render.c  render.h  roms.c  roms.h  state.c  state.h
src/roms/: launcher.c  launcher.h  roms.c
